feature: Update KtLint to 1.0.1
Closes: #22
Signed-off-by: Andre Weber <andre.weber3@etas.com>