@@ -1,3 +1,5 @@
+import org.eclipse.kuksa.companion.extension.lib
+
 /*
  * Copyright (c) 2023 Contributors to the Eclipse Foundation
  *
@@ -16,42 +18,29 @@
  * SPDX-License-Identifier: Apache-2.0
  *
  */
+plugins {
+    id("org.jlleitschuh.gradle.ktlint")
+}
 
-val ktlint by configurations.creating
+// https://github.com/jlleitschuh/ktlint-gradle#configuration
+ktlint {
+    version.set("1.0.1")
+    android.set(true)
+    debug.set(false)
+    verbose.set(true)
+    ignoreFailures.set(false)
+    coloredOutput.set(false)
+    enableExperimentalRules.set(false)
 
-dependencies {
-    // can't use Project.lib exension here because the plugin is applied before the versionCatalog is available
-    ktlint("com.pinterest:ktlint:0.49.0") {
-        attributes {
-            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
-        }
+    filter {
+        exclude(
+            "**/generated/**",
+            "**/build/**",
+            "**/node_modules/**",
+        )
     }
 }
 
-val ktlintCheck by tasks.registering(JavaExec::class) {
-    group = LifecycleBasePlugin.VERIFICATION_GROUP
-    description = "Check Kotlin code style"
-    classpath = ktlint
-    mainClass.set("com.pinterest.ktlint.Main")
-    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
-    args(
-        "**/src/**/*.kt",
-        "**.kts",
-        "!**/build/**",
-    )
-}
-
-tasks.register<JavaExec>("ktlintFormat") {
-    group = LifecycleBasePlugin.VERIFICATION_GROUP
-    description = "Check Kotlin code style and format"
-    classpath = ktlint
-    mainClass.set("com.pinterest.ktlint.Main")
-    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
-    args(
-        "-F",
-        "**/src/**/*.kt",
-        "**.kts",
-        "!**/build/**",
-    )
+dependencies {
+    ktlintRuleset(lib("ktlint-compose-rules"))
 }
